--- a/day03/task.ipynb
+++ b/day03/task.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 160,
    "id": "ba3a58e9",
    "metadata": {},
    "outputs": [],
@@ -242,13 +242,13 @@
     "                break\n",
     "        j += 1\n",
     "    # print(\"max_j:\", max_j, line[max_j])\n",
-    "    print(max_i, max_j, line[max_i], line[max_j], line)\n",
+    "    # print(max_i, max_j, line[max_i], line[max_j], line)\n",
     "    return int(line[max_i]) * 10 + int(line[max_j])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 161,
    "id": "13c6b060",
    "metadata": {},
    "outputs": [
@@ -256,24 +256,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "94 96 7 4 2261232211332221132222312231213241233432222222242422212425432333414123222221232322223134222233724422\n",
-      "42 56 9 8 2412284242233242323324123422231712242212239132343312233283222223232243212133231242233421332137223222\n",
-      "25 95 8 6 5222233323336424222233232822233321233222323322231432232323222133223323222231122223241122222423363432\n",
-      "13 66 9 9 6334436385843957344144444464344343443364644544447655344335564343539284483243547448454254334484416333\n",
-      "95 96 7 3 2222132225133232413222332442334134223422321122221213342222332323323113334112335222521322243241373221\n",
-      "61 63 6 5 3253234544235432324455434344423432324554555443424444433434423635335453343544425445245243534344552453\n",
-      "0 99 6 6 6425332235244124433442343223525434353333544334342234452445533211332433532433212542334442432343423346\n",
-      "29 48 8 5 1362122232222235323222223222382221122222233222225222333222214333222342132232123122221232153231332233\n",
-      "36 44 7 5 2211331312422231113221133221322112217223311152113242222231422211212422222232122232224122123232321332\n",
-      "75 96 8 7 4467565464364534532466565456525437643353337546345543365554775436546563557378465535446436224354367447\n",
-      "808\n"
+      "17155\n"
      ]
     }
    ],
    "source": [
     "sum = 0\n",
     "# print(input.splitlines())\n",
-    "for line in input.splitlines()[:10]:\n",
+    "for line in input.splitlines():\n",
     "    result = search(line.strip())\n",
     "    sum += result\n",
     "print(sum)"
@@ -281,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "id": "cb39cf4d",
    "metadata": {},
    "outputs": [],
@@ -314,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 164,
    "id": "725df262",
    "metadata": {},
    "outputs": [
@@ -322,25 +312,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "results before reverse: [7, 4]\n",
-      "results before reverse: [9, 8]\n",
-      "results before reverse: [8, 6]\n",
-      "results before reverse: [9, 9]\n",
-      "results before reverse: [7, 3]\n",
-      "results before reverse: [6, 5]\n",
-      "results before reverse: [6, 6]\n",
-      "results before reverse: [8, 5]\n",
-      "results before reverse: [7, 5]\n",
-      "results before reverse: [8, 7]\n",
-      "808\n"
+      "169685670469164\n"
      ]
     }
    ],
    "source": [
     "sum = 0\n",
     "# print(input.splitlines())\n",
-    "for line in input.splitlines()[:10]:\n",
-    "    result = search2(line.strip(), 2)\n",
+    "for line in input.splitlines():\n",
+    "    result = search2(line.strip(), 12)\n",
     "    sum += result\n",
     "print(sum)"
    ]
