fix dodgy overlaps

--- a/day05/day5.ipynb
+++ b/day05/day5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 104,
    "id": "64f32c18",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 105,
    "id": "7d46c3ee",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 106,
    "id": "8e4ac947",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 107,
    "id": "1a668fb5",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,6 @@
      "output_type": "stream",
      "text": [
       "14\n",
-      "96 94\n",
       "354143734113772\n"
      ]
     }
@@ -104,7 +103,7 @@
     "        return (collection[0], collection[1])\n",
     "    \n",
     "def overlaps(r1, r2):\n",
-    "    return r1[0] <= r2[0] <= r1[1] or r1[0] <= r2[1] <= r1[1]\n",
+    "    return r1[0] <= r2[1] and r2[0] <= r1[1]\n",
     "\n",
     "def extend(r1, r2):\n",
     "    return (min(r1[0], r2[0]), max(r1[1], r2[1]))\n",
@@ -120,7 +119,7 @@
     "            currentRange = extend(currentRange, r)\n",
     "        else:\n",
     "            nextRanges.append(r)\n",
-    "    if (currentRange == ranges[0] and nextRanges == workingRanges):\n",
+    "    if (currentRange == ranges[0]):\n",
     "        return [currentRange] + coalesce(nextRanges)\n",
     "    else:\n",
     "        return coalesce([currentRange] + nextRanges)\n",
@@ -138,10 +137,10 @@
     "\n",
     "# at this point, I'm getting too many (suspect that my algorithm is leaving overlapping ranges)\n",
     "# so I'm going to do something dodgy here, and reverse what I have and re-run the reducing operation.\n",
-    "result.reverse()\n",
-    "result2 = coalesce(result)\n",
-    "print(len(result), len(result2))\n",
-    "print(countFresh(result2))\n",
+    "# result.reverse()\n",
+    "# result2 = coalesce(result)\n",
+    "# print(len(result), len(result2))\n",
+    "print(countFresh(result))\n",
     "\n",
     "# :( now I'm getting the right answer.\n",
     "# may revisit later to work out where I went wrong\n"
