--- a/day08/day08.ipynb
+++ b/day08/day08.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 114,
    "id": "7e51a415",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "ab7ef27b",
    "metadata": {},
    "outputs": [
@@ -32,58 +32,35 @@
      "output_type": "stream",
      "text": [
       "1 connections\n",
-      "(np.float64(321.560258738545), [[162, 817, 812], [431, 825, 988]]) (np.float64(322.36935338211043), [[906, 360, 560], [805, 96, 715]])\n",
-      "[[162, 817, 812], [425, 690, 689]]\n",
+      "190\n",
+      "19 2\n",
       "2 connections\n",
-      "(np.float64(322.36935338211043), [[906, 360, 560], [805, 96, 715]]) (np.float64(328.11888089532425), [[431, 825, 988], [425, 690, 689]])\n",
-      "[[162, 817, 812], [425, 690, 689], [431, 825, 988]]\n",
+      "190\n",
+      "18 3\n",
       "3 connections\n",
-      "(np.float64(328.11888089532425), [[431, 825, 988], [425, 690, 689]]) (np.float64(333.6555109690233), [[862, 61, 35], [984, 92, 344]])\n",
-      "[[162, 817, 812], [425, 690, 689], [431, 825, 988]]\n",
-      "[[906, 360, 560], [805, 96, 715]]\n",
+      "190\n",
+      "17 6\n",
       "4 connections\n",
-      "(np.float64(333.6555109690233), [[862, 61, 35], [984, 92, 344]]) (np.float64(338.33858780813046), [[52, 470, 668], [117, 168, 530]])\n",
-      "[[162, 817, 812], [425, 690, 689], [431, 825, 988]]\n",
-      "[[906, 360, 560], [805, 96, 715]]\n",
+      "190\n",
+      "17 6\n",
       "5 connections\n",
-      "(np.float64(338.33858780813046), [[52, 470, 668], [117, 168, 530]]) (np.float64(344.3893145845266), [[819, 987, 18], [941, 993, 340]])\n",
-      "[[162, 817, 812], [425, 690, 689], [431, 825, 988]]\n",
-      "[[906, 360, 560], [805, 96, 715]]\n",
-      "[[862, 61, 35], [984, 92, 344]]\n",
+      "190\n",
+      "16 12\n",
       "6 connections\n",
-      "(np.float64(344.3893145845266), [[819, 987, 18], [941, 993, 340]]) (np.float64(347.59890678769403), [[906, 360, 560], [739, 650, 466]])\n",
-      "[[162, 817, 812], [425, 690, 689], [431, 825, 988]]\n",
-      "[[906, 360, 560], [805, 96, 715]]\n",
-      "[[862, 61, 35], [984, 92, 344]]\n",
-      "[[52, 470, 668], [117, 168, 530]]\n",
+      "190\n",
+      "15 12\n",
       "7 connections\n",
-      "(np.float64(347.59890678769403), [[906, 360, 560], [739, 650, 466]]) (np.float64(350.786259708102), [[346, 949, 466], [425, 690, 689]])\n",
-      "[[162, 817, 812], [425, 690, 689], [431, 825, 988]]\n",
-      "[[906, 360, 560], [805, 96, 715]]\n",
-      "[[862, 61, 35], [984, 92, 344]]\n",
-      "[[52, 470, 668], [117, 168, 530]]\n",
-      "[[819, 987, 18], [941, 993, 340]]\n",
+      "190\n",
+      "14 8\n",
       "8 connections\n",
-      "(np.float64(350.786259708102), [[346, 949, 466], [425, 690, 689]]) (np.float64(352.936254867646), [[906, 360, 560], [984, 92, 344]])\n",
-      "[[162, 817, 812], [425, 690, 689], [431, 825, 988]]\n",
-      "[[906, 360, 560], [805, 96, 715], [739, 650, 466]]\n",
-      "[[862, 61, 35], [984, 92, 344]]\n",
-      "[[52, 470, 668], [117, 168, 530]]\n",
-      "[[819, 987, 18], [941, 993, 340]]\n",
+      "190\n",
+      "13 12\n",
       "9 connections\n",
-      "(np.float64(352.936254867646), [[906, 360, 560], [984, 92, 344]]) (np.float64(367.9823365326113), [[592, 479, 940], [425, 690, 689]])\n",
-      "[[162, 817, 812], [425, 690, 689], [431, 825, 988], [346, 949, 466]]\n",
-      "[[906, 360, 560], [805, 96, 715], [739, 650, 466]]\n",
-      "[[862, 61, 35], [984, 92, 344]]\n",
-      "[[52, 470, 668], [117, 168, 530]]\n",
-      "[[819, 987, 18], [941, 993, 340]]\n",
+      "190\n",
+      "12 24\n",
       "10 connections\n",
-      "(np.float64(367.9823365326113), [[592, 479, 940], [425, 690, 689]]) (np.float64(371.70552861102294), [[352, 342, 300], [542, 29, 236]])\n",
-      "[[162, 817, 812], [425, 690, 689], [431, 825, 988], [346, 949, 466]]\n",
-      "[[906, 360, 560], [805, 96, 715], [739, 650, 466], [984, 92, 344]]\n",
-      "[[862, 61, 35], [984, 92, 344]]\n",
-      "[[52, 470, 668], [117, 168, 530]]\n",
-      "[[819, 987, 18], [941, 993, 340]]\n"
+      "190\n",
+      "11 40\n"
      ]
     }
    ],
@@ -94,18 +71,13 @@
     "def process(name, numberOfJoins):\n",
     "    # print(getInput('small.txt'))\n",
     "    points = getInput(name)\n",
-    "    all_pairs = list([list(combo) for combo in combinations(getInput('small.txt'), 2)])\n",
+    "    all_pairs = list([list(combo) for combo in combinations(points, 2)])\n",
+    "    print(len(all_pairs))\n",
     "    distances = [np.linalg.norm(np.array(first) - np.array(second)) \n",
     "        for (first, second) in all_pairs]\n",
     "\n",
     "    dist_pair = zip(distances, all_pairs)\n",
     "    sorted_dist_pair = sorted(dist_pair, key = lambda x: x[0])\n",
-    "\n",
-    "    # remainingJoins = numberOfJoins\n",
-    "    \n",
-    "    joins = sorted_dist_pair[:numberOfJoins]\n",
-    "    print(sorted_dist_pair[numberOfJoins], sorted_dist_pair[numberOfJoins + 1])\n",
-    "    circuits = [list(pair) for _, pair in joins]\n",
     "\n",
     "    # list[int] === point\n",
     "    # list[list[int]] === circuit\n",
@@ -134,24 +106,196 @@
     "            if not found:\n",
     "                leftovers.append(circuit)\n",
     "        if firstCircuit == things[0]:\n",
-    "            if len(firstCircuit)>1:\n",
-    "                print(firstCircuit)\n",
     "            return [firstCircuit] + coalesce(leftovers)\n",
     "        else:\n",
     "            return coalesce([firstCircuit] + leftovers)\n",
     "\n",
-    "    return coalesce(circuits + [[p] for p in points])\n",
+    "    circuits = [list(pair) for _, pair in sorted_dist_pair]\n",
+    "    join = 0\n",
+    "    cumulative = [[p] for p in points]\n",
+    "    while join < numberOfJoins:\n",
+    "        before = cumulative\n",
+    "        after = coalesce( [circuits[join]] +  cumulative)\n",
+    "        if before == after:\n",
+    "            numberOfJoins += 1\n",
+    "        join += 1\n",
+    "            \n",
+    "        # print(f'join {join}')\n",
+    "        cumulative = after\n",
+    "    return cumulative\n",
+    "\n",
+    "import numpy as np\n",
     "\n",
     "for i in range(1, 11):\n",
     "    print(f'{i} connections')\n",
-    "    process('small.txt', i)\n",
+    "    result = process('small.txt', i)\n",
+    "    lengths = [len(x) for x in result]\n",
+    "    print(len(result), lengths[0] * lengths[1] * lengths[2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea0526ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "499500\n",
+      "283 2912\n"
+     ]
+    }
+   ],
+   "source": [
+    "bigResult = process('input.txt', 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "93950012",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[91, 32, 28, 27, 27, 25, 19, 19, 18, 18, 17, 17, 16, 15, 12, 12, 11, 11, 10, 10, 9, 9, 9, 9, 8, 7, 7, 7, 7, 7, 7, 6, 6, 6, 6, 6, 6, 6, 6, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 5, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "283 81536\n"
+     ]
+    }
+   ],
+   "source": [
+    "bigLengths = sorted([len(x) for x in bigResult], reverse=True)\n",
+    "print(bigLengths)\n",
     "\n",
-    "# for c in coalesce(circuits):\n",
-    "#     print(c)\n",
+    "print(len(bigResult), bigLengths[0] * bigLengths[1] * bigLengths[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d87c7e6a",
+   "metadata": {},
+   "source": [
+    "# Part 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0342e69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "import numpy as np\n",
     "\n",
-    "# print(coalesce(circuits \n",
-    "#     # + [[p] for p in points]\n",
-    "# ))"
+    "def process2(name):\n",
+    "    # print(getInput('small.txt'))\n",
+    "    points = getInput(name)\n",
+    "    all_pairs = list([list(combo) for combo in combinations(points, 2)])\n",
+    "    print(len(all_pairs))\n",
+    "    distances = [np.linalg.norm(np.array(first) - np.array(second)) \n",
+    "        for (first, second) in all_pairs]\n",
+    "\n",
+    "    dist_pair = zip(distances, all_pairs)\n",
+    "    sorted_dist_pair = sorted(dist_pair, key = lambda x: x[0])\n",
+    "\n",
+    "    # list[int] === point\n",
+    "    # list[list[int]] === circuit\n",
+    "    # list[list[list[int]]] === collection of circuits\n",
+    "\n",
+    "    def joinThem(c1: list[list[int]], c2:list[list[int]]):\n",
+    "        for point in c2:\n",
+    "            if point not in c1:\n",
+    "                c1.append(point)\n",
+    "        return c1\n",
+    "\n",
+    "\n",
+    "    def coalesce(things: list[list[list[int]]]):\n",
+    "        starting = len(things)\n",
+    "        if starting == 0:\n",
+    "            return []\n",
+    "        firstCircuit = things[0]\n",
+    "        leftovers = []\n",
+    "        for circuit in things[1:]:\n",
+    "            found = False\n",
+    "            for point in circuit:\n",
+    "                if point in firstCircuit:\n",
+    "                    firstCircuit = joinThem(firstCircuit, circuit)\n",
+    "                    found = True\n",
+    "                    break\n",
+    "            if not found:\n",
+    "                leftovers.append(circuit)\n",
+    "        if firstCircuit == things[0]:\n",
+    "            return [firstCircuit] + coalesce(leftovers)\n",
+    "        else:\n",
+    "            return coalesce([firstCircuit] + leftovers)\n",
+    "\n",
+    "    circuits = [list(pair) for _, pair in sorted_dist_pair]\n",
+    "    join = 0\n",
+    "    cumulative = [[p] for p in points]\n",
+    "    while join < len(circuits):\n",
+    "        before = cumulative\n",
+    "        after = coalesce( [circuits[join]] +  cumulative)\n",
+    "        if (len(after) == 1):\n",
+    "            xs = [x for [x, y, z] in circuits[join]][:2]\n",
+    "            print(xs, np.multiply.reduce(xs))\n",
+    "            return np.multiply.reduce(xs)\n",
+    "        join += 1\n",
+    "        # print(f'join {join}')\n",
+    "        cumulative = after\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "1996dbe2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "190\n",
+      "[216, 117] 25272\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[[970, 615, 88],\n",
+       "  [941, 993, 340],\n",
+       "  [739, 650, 466],\n",
+       "  [466, 668, 158],\n",
+       "  [346, 949, 466],\n",
+       "  [52, 470, 668],\n",
+       "  [425, 690, 689],\n",
+       "  [57, 618, 57],\n",
+       "  [162, 817, 812],\n",
+       "  [805, 96, 715],\n",
+       "  [984, 92, 344],\n",
+       "  [592, 479, 940],\n",
+       "  [431, 825, 988],\n",
+       "  [542, 29, 236],\n",
+       "  [862, 61, 35],\n",
+       "  [352, 342, 300],\n",
+       "  [117, 168, 530],\n",
+       "  [906, 360, 560],\n",
+       "  [819, 987, 18]],\n",
+       " [[216, 146, 977]]]"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "process2('small.txt')"
    ]
   }
  ],
