--- a/day06/task.ipynb
+++ b/day06/task.ipynb
@@ -77,19 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "62d4992f",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "got it [1, 24, 356] *\n",
-      "got it [369, 248, 8] +\n",
-      "got it [32, 581, 175] *\n",
-      "got it [623, 431, 4] +\n"
-     ]
+     "data": {
+      "text/plain": [
+       "np.int64(10153315705125)"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -110,7 +110,7 @@
     "        row = ''.join(row).strip()\n",
     "        if row == '':\n",
     "            # do the thing\n",
-    "            print('got it', entries, operator)\n",
+    "            # print('got it', entries, operator)\n",
     "            if operator == '+':\n",
     "                sum += np.add.reduce(entries)\n",
     "            else: \n",
@@ -122,6 +122,7 @@
     "        \n",
     "        \n",
     "process('small.txt')\n",
+    "process('input.txt')\n",
     "    "
    ]
   }
