--- a/day08/day08.ipynb
+++ b/day08/day08.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "e0342e69",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 139,
    "id": "1996dbe2",
    "metadata": {},
    "outputs": [
@@ -261,41 +261,25 @@
      "output_type": "stream",
      "text": [
       "190\n",
-      "[216, 117] 25272\n"
+      "[216, 117] 25272\n",
+      "499500\n",
+      "[78610, 89273] 7017750530\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[[[970, 615, 88],\n",
-       "  [941, 993, 340],\n",
-       "  [739, 650, 466],\n",
-       "  [466, 668, 158],\n",
-       "  [346, 949, 466],\n",
-       "  [52, 470, 668],\n",
-       "  [425, 690, 689],\n",
-       "  [57, 618, 57],\n",
-       "  [162, 817, 812],\n",
-       "  [805, 96, 715],\n",
-       "  [984, 92, 344],\n",
-       "  [592, 479, 940],\n",
-       "  [431, 825, 988],\n",
-       "  [542, 29, 236],\n",
-       "  [862, 61, 35],\n",
-       "  [352, 342, 300],\n",
-       "  [117, 168, 530],\n",
-       "  [906, 360, 560],\n",
-       "  [819, 987, 18]],\n",
-       " [[216, 146, 977]]]"
+       "np.int64(7017750530)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "process2('small.txt')"
+    "process2('small.txt')\n",
+    "process2('input.txt')"
    ]
   }
  ],
