--- a/day09/day09.ipynb
+++ b/day09/day09.ipynb
@@ -10,38 +10,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "ba33011a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def readFile(name: str):\n",
-    "    with open(name, 'r') as f:\n",
+    "    with open(name, \"r\") as f:\n",
     "        lines = [line.strip() for line in f]\n",
-    "        return [[int(val) for val in line.split(',')] for line in lines]\n",
-    "        "
+    "        return [[int(val) for val in line.split(\",\")] for line in lines]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ae487bf9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import itertools\n",
     "\n",
+    "\n",
     "def process1(name: str):\n",
     "    values = readFile(name)\n",
     "    possibilities = itertools.combinations(values, 2)\n",
     "    # print(possibilities)\n",
-    "    areas = [(abs(first[0]-second[0]) + 1)*(abs(first[1] - second[1])+1) for [first, second] in possibilities]\n",
+    "    areas = [\n",
+    "        (abs(first[0] - second[0]) + 1) * (abs(first[1] - second[1]) + 1)\n",
+    "        for [first, second] in possibilities\n",
+    "    ]\n",
     "    return sorted(areas, reverse=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "14794594",
    "metadata": {},
    "outputs": [
@@ -64,8 +67,8 @@
     }
    ],
    "source": [
-    "print(process1('small.txt')[0])\n",
-    "process1('input.txt')[0]"
+    "print(process1(\"small.txt\")[0])\n",
+    "process1(\"input.txt\")[0]"
    ]
   },
   {
@@ -78,121 +81,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "95398c8c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "def plotPoints(points: list[list[int]]):\n",
-    "    # print([p[0] for p in points])\n",
-    "    sizeX = max([p[0] for p in points]) + 3\n",
-    "    sizeY = max([p[1] for p in points]) + 2\n",
-    "    board = np.zeros((sizeY, sizeX))\n",
-    "    for p in points:\n",
-    "        board[p[1], p[0]] = 1\n",
-    "    return board\n",
-    "\n",
-    "def drawLine(board, pi, pj):\n",
-    "    if (pi[0] == pj[0]):\n",
-    "        ys = sorted([pi[1], pj[1]])\n",
-    "        for y in range(ys[0]+1, ys[1]):\n",
-    "            board[y, pi[0]] = 2\n",
-    "    else:\n",
-    "        xs = sorted([pi[0], pj[0]])\n",
-    "        for x in range(xs[0]+1, xs[1]):\n",
-    "            board[pi[1], x] = 2\n",
-    "\n",
-    "def outline(board, points):\n",
-    "    for i in range(len(points) - 1):\n",
-    "        pi = points[i]\n",
-    "        pj = points[i+1]\n",
-    "        drawLine(board, pi, pj)\n",
-    "    drawLine(board, points[-1], points[0])\n",
-    "\n",
-    "def fill(board):\n",
-    "    # set background to -1 for now\n",
-    "    yrange = range(len(board))\n",
-    "    xrange =  range(len(board[0]))\n",
-    "    for y in yrange:\n",
-    "        for x in xrange:\n",
-    "            if board[y, x] == 0:\n",
-    "                board[y, x] = -1\n",
-    "    # seed the first pixel as background\n",
-    "    board[0, 0] = 0\n",
-    "    # fill neighbouring pixels\n",
-    "    def areAnyNeighboursBackground(x, y):\n",
-    "        return (x-1 in xrange and board[y, x-1] == 0) or \\\n",
-    "            (x+1 in xrange and board[y, x+1] == 0) or \\\n",
-    "            (y-1 in yrange and board[y-1, x] == 0) or \\\n",
-    "            (y+1 in yrange and board[y+1, x] == 0)\n",
-    "\n",
-    "    def enlarge():\n",
-    "        changed = False\n",
-    "        for y in yrange:\n",
-    "            for x in xrange:\n",
-    "                if (board[y, x] == -1 and areAnyNeighboursBackground(x, y)):\n",
-    "                    board[y, x] = 0\n",
-    "                    changed = True\n",
-    "        return changed\n",
-    "\n",
-    "    goAgain = enlarge()\n",
-    "    while goAgain:\n",
-    "        goAgain = enlarge()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa67cb9f",
+   "execution_count": 9,
+   "id": "d6af8253",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[97889, 97889, 98146, 98146, 98367, 98367, 97984, 97984, 97927, 97927, 97692, 97692, 97589, 97589, 97111, 97111, 96575, 96575, 97193, 97193, 96830, 96830, 96362, 96362, 95677, 95677, 95695, 95695, 95398, 95398, 94849, 94849, 94400, 94400, 93694, 93694, 92776, 92776, 92158, 92158, 91866, 91866, 91105, 91105, 90958, 90958, 89619, 89619, 89682, 89682, 88370, 88370, 87755, 87755, 87484, 87484, 86710, 86710, 85188, 85188, 84401, 84401, 83879, 83879, 83297, 83297, 82340, 82340, 81330, 81330, 80399, 80399, 79079, 79079, 78149, 78149, 77524, 77524, 76169, 76169, 75483, 75483, 74352, 74352, 73318, 73318, 72292, 72292, 70978, 70978, 70017, 70017, 68656, 68656, 67603, 67603, 66528, 66528, 65251, 65251, 64282, 64282, 63014, 63014, 61830, 61830, 60784, 60784, 59486, 59486, 58401, 58401, 57153, 57153, 55896, 55896, 54782, 54782, 53505, 53505, 52328, 52328, 51094, 51094, 49878, 49878, 48667, 48667, 47424, 47424, 46226, 46226, 45040, 45040, 43871, 43871, 42568, 42568, 41332, 41332, 40119, 40119, 39141, 39141, 37850, 37850, 36651, 36651, 35536, 35536, 34458, 34458, 33241, 33241, 31924, 31924, 31113, 31113, 29753, 29753, 28811, 28811, 27626, 27626, 26587, 26587, 25588, 25588, 24491, 24491, 23545, 23545, 22648, 22648, 21526, 21526, 20425, 20425, 19650, 19650, 18582, 18582, 17494, 17494, 16699, 16699, 16219, 16219, 14968, 14968, 14139, 14139, 13324, 13324, 12530, 12530, 12092, 12092, 11060, 11060, 10569, 10569, 9877, 9877, 8993, 8993, 8854, 8854, 8223, 8223, 7584, 7584, 6713, 6713, 6512, 6512, 5670, 5670, 5388, 5388, 4679, 4679, 4158, 4158, 3847, 3847, 3935, 3935, 3727, 3727, 3568, 3568, 2966, 2966, 3127, 3127, 2047, 2047, 2308, 2308, 2365, 2365, 1816, 1816, 2366, 2366, 2456, 2456, 94985, 94985, 1712, 1712, 1766, 1766, 1659, 1659, 2134, 2134, 2392, 2392, 2924, 2924, 2753, 2753, 3480, 3480, 3244, 3244, 3991, 3991, 3541, 3541, 3781, 3781, 4491, 4491, 5428, 5428, 5289, 5289, 5494, 5494, 6414, 6414, 7237, 7237, 7926, 7926, 8350, 8350, 9002, 9002, 9540, 9540, 10100, 10100, 10740, 10740, 11643, 11643, 12238, 12238, 12800, 12800, 13680, 13680, 14524, 14524, 15603, 15603, 16493, 16493, 17177, 17177, 17819, 17819, 18821, 18821, 19741, 19741, 20537, 20537, 21788, 21788, 22808, 22808, 23529, 23529, 24488, 24488, 25650, 25650, 26781, 26781, 27714, 27714, 28958, 28958, 30276, 30276, 31115, 31115, 32288, 32288, 33571, 33571, 34462, 34462, 35758, 35758, 36850, 36850, 37986, 37986, 39252, 39252, 40386, 40386, 41686, 41686, 42796, 42796, 44010, 44010, 45227, 45227, 46504, 46504, 47689, 47689, 48907, 48907, 50122, 50122, 51327, 51327, 52571, 52571, 53798, 53798, 54949, 54949, 56225, 56225, 57354, 57354, 58557, 58557, 59737, 59737, 61038, 61038, 62266, 62266, 63445, 63445, 64336, 64336, 65745, 65745, 66787, 66787, 67896, 67896, 69238, 69238, 70360, 70360, 71306, 71306, 72267, 72267, 73592, 73592, 74489, 74489, 75268, 75268, 76450, 76450, 77621, 77621, 78370, 78370, 79593, 79593, 80674, 80674, 81232, 81232, 82332, 82332, 82826, 82826, 84152, 84152, 84598, 84598, 85609, 85609, 86587, 86587, 87436, 87436, 87756, 87756, 88809, 88809, 89567, 89567, 90385, 90385, 90593, 90593, 91077, 91077, 91800, 91800, 93024, 93024, 93402, 93402, 93281, 93281, 93731, 93731, 94471, 94471, 94786, 94786, 95753, 95753, 95397, 95397, 95942, 95942, 96235, 96235, 96613, 96613, 96761, 96761, 97077, 97077, 97119, 97119, 97923, 97923, 97858, 97858, 97727, 97727, 98359, 98359, 98432, 98432]\n"
+      "1574684850\n"
      ]
     }
    ],
    "source": [
+    "import shapely\n",
     "import itertools\n",
     "\n",
-    "points = readFile('input.txt')\n",
-    "# print(points)\n",
-    "reds = plotPoints(points)\n",
-    "outline(reds, points)\n",
-    "fill(reds)\n",
-    "print(reds)\n",
+    "\n",
+    "def readFile(name: str):\n",
+    "    with open(name, \"r\") as f:\n",
+    "        lines = [line.strip() for line in f]\n",
+    "        return [[int(val) for val in line.split(\",\")] for line in lines]\n",
+    "\n",
+    "\n",
+    "points = readFile(\"input.txt\")\n",
+    "mosaic = shapely.Polygon(points)\n",
+    "\n",
     "possibilities = itertools.combinations(points, 2)\n",
-    "# print(len(list(possibilities)))\n",
+    "\n",
     "maxArea = 0\n",
-    "\n",
-    "def area(point1, point2):\n",
-    "    minx = min([point1[0], point2[0]])\n",
-    "    maxx = max([point1[0], point2[0]])\n",
-    "    miny = min([point1[1], point2[1]])\n",
-    "    maxy = max([point1[1], point2[1]])\n",
-    "    # print(minx, maxx, miny, maxy)\n",
-    "    for y in range(miny, maxy+1):\n",
-    "        for x in range(minx, maxx+1):\n",
-    "            if reds[y, x] == 0:\n",
-    "                # print('empty')\n",
-    "                return 0\n",
-    "    return (maxx-minx +1)*(maxy-miny+1)\n",
-    "\n",
     "for p1, p2 in possibilities:\n",
-    "    # print(p1, p2)\n",
-    "    pArea = area(p1, p2)\n",
-    "    # print(p1, p2, pArea)\n",
-    "    maxArea = max([maxArea, pArea])\n",
+    "    minx = min(p1[0], p2[0])\n",
+    "    maxx = max(p1[0], p2[0])\n",
+    "    miny = min(p1[1], p2[1])\n",
+    "    maxy = max(p1[1], p2[1])\n",
+    "    rectangle = shapely.Polygon(\n",
+    "        [[minx, miny], [maxx, miny], [maxx, maxy], [minx, maxy]]\n",
+    "    )\n",
+    "    if mosaic.contains(rectangle):\n",
+    "        maxArea = max(maxArea, (maxx - minx + 1) * (maxy - miny + 1))\n",
     "\n",
-    "print(maxArea)\n",
-    "\n",
-    "# areas = [area(filled, p1, p2) for p1, p2 in possibilities]\n",
-    "\n",
-    "# print(sorted(areas, reverse=True)[0])\n"
+    "print(maxArea)"
    ]
   }
  ],
